--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -6,17 +6,19 @@ nav {
   top: 0;
   left: 0;
   width: 100%;
+  height: 4rem;
   z-index: 1;
 }
 a {
-  display: inline-block;
+  display: flex;
   color: var(--white);
-  font-size: 1rem;
+  font-size: 1.5rem;
   margin: 0 0.5rem;
   padding: 0.75rem 1.5rem;
   position: relative;
   text-decoration: none;
   text-transform: uppercase;
+  align-items: center;
 }
 
 nav a::after {
